--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,7 @@
 <header>
   <p>Projects</p>
 </header>
+<p class="addlink">
+	<%= link_to "Create new project",new_project_path%>
+</p>
 <%=render @projects%>
