--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,9 @@
   <%= render partial: "shared/includes"%>
 </head>
 <body>
-<%if notice%>
-	<p id="notice"><%= notice %></p>
-<%end%>
+<%if notice%><p id="notice"><%= notice %></p><%end%>
+<%if alert%><p id="alert"><%= alert %></p><%end%>
+
 <%= yield %>
 
 </body>
